# FDMPossionInCuda

./: CMakeLists.txt  main.cpp  system.csv
Cuda/: CMakeLists.txt  ParallelSolver.cu
Data/: plot_system.m  system.csv
Matlab/: plot_system.m
System/: CMakeLists.txt  System.cpp  System.hpp
Test/: add_cuda  hello  hello.cu
src/: CMakeLists.txt  main.cpp
src/Cuda/: ParallelSolver.cu  ParallelSolver.hpp
src/EquationSystem/: EquationSystem.cpp
src/Equation_System/: Equation_System.cpp  Equation_System.hpp
src/LinearSolver/: LinearSolver.cpp  LinearSolver.hpp
src/Plotter/: Plotter.cpp  Plotter.hpp
